--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
@@ -135,8 +135,8 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Galerie d'images en React et Three.js](https://www.youtube.com/watch?v=Jqo63Oxq0Ng)
-- [La Roadmap React Parfaite pour 2023](https://www.youtube.com/watch?v=GMrrm3v2WGI)
+- 🎥 [Galerie d'images en React et Three.js](https://www.youtube.com/watch?v=Jqo63Oxq0Ng)
+- 🎥 [La Roadmap React Parfaite pour 2023](https://www.youtube.com/watch?v=GMrrm3v2WGI)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
