--- a/website/newsletter/126/index.mdx
+++ b/website/newsletter/126/index.mdx
@@ -12,7 +12,7 @@ As you might expect with Thanksgiving, it's a rather quiet week in terms of Reac
 
 It's the end of [Black Friday](https://thisweekinreact.com/black-friday), but some offers are still valid.
 
-If your company is recruiting, I also offer a [**discount of -50% on job offers sponsoring packages**](https://thisweekinreact.com/sponsor#sponsor-jobs). Don't hesitate to talk to your HR or your manager, it helps me a lot!
+If your company is recruiting, I also offer a [**discount of -50% on job offer ads**](https://thisweekinreact.com/sponsor#sponsor-jobs). Don't hesitate to talk to your HR or your manager, it helps me a lot!
 
 <!-- truncate -->
 
