--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -1,8 +1,8 @@
 ---
-slug: /NUMBER-TODO
-title: "React Hebdo #TEMPLATE: ..."
+slug: /ISSUENUMBER
+title: "React Hebdo #ISSUENUMBER: ..."
 authors: [slorber]
-date: 12-31-2030 TODO
+date: 12-31-2023
 image: /img/TWIR_POST.png
 unlisted: true
 ---
