--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -1,8 +1,8 @@
 ---
-slug: /NUMBER-TODO
-title: "This Week In React #TEMPLATE: ..."
+slug: /ISSUENUMBER
+title: "This Week In React #ISSUENUMBER: ..."
 authors: [slorber]
-date: 12-31-2030 TODO
+date: 12-31-2023
 image: /img/TWIR_POST.png
 unlisted: true
 ---
