--- a/website/newsletter/127/index.mdx
+++ b/website/newsletter/127/index.mdx
@@ -53,7 +53,26 @@ You can get started here: [flycode.com/developers](https://www.flycode.com/devel
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+<div style={{maxWidth: 250}}>
+
+[![JavaScriptBoard.com - Let the job find you](/emails/issues/127/javascriptboard.jpg)](https://www.javascriptboard.com/)
+
+</div>
+
+**[JavaScriptBoard.com - Let the job find you](https://www.javascriptboard.com/)**
+
+JavaScriptBoard.com **reverses the hiring system** and focuses on developers looking for **long-term work relationships.**
+
+No more browsing through LinkedIn recruiter messages and uninteresting job offers!
+
+At JavaScriptBoard.com you sign up and only receive job offers that match YOUR requirements.
+
+- 100% of the jobs have the **salary range included**.
+- 100% **anonymity for developers** by default.
+- **CV is not needed**. Completely optional.
+- Earn **$500 if you are hired **through JavaScriptBoard.com!
+
+**Join for free at [JavaScriptBoard.com](https://www.javascriptboard.com/)**
 
 ---
 
