--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/127/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/127/index.mdx
@@ -53,26 +53,26 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 ## 💸 Sponsor {#sponsor2}
 
-<div style={{maxWidth: 250}}>
+<div style={{maxWidth: 300}}>
 
-[![JavaScriptBoard.com - Let the job find you](/emails/issues/127/javascriptboard.jpg)](https://www.javascriptboard.com/)
+[![JavaScriptBoard.com - Laisse le job te trouver](/emails/issues/127/javascriptboard.jpg)](https://www.javascriptboard.com/)
 
 </div>
 
-**[JavaScriptBoard.com - Let the job find you](https://www.javascriptboard.com/)**
+**[JavaScriptBoard.com - Laisse le job te trouver](https://www.javascriptboard.com/)**
 
-JavaScriptBoard.com **reverses the hiring system** and focuses on developers looking for **long-term work relationships.**
+JavaScriptBoard.com **renverse le système d'embauche** et se concentre sur les développeurs qui recherchent **des relations de travail à long terme**.
 
-No more browsing through LinkedIn recruiter messages and uninteresting job offers!
+Plus besoin de lire les messages des recruteurs sur LinkedIn et les offres d'emploi inintéressantes !
 
-At JavaScriptBoard.com you sign up and only receive job offers that match YOUR requirements.
+Sur JavaScriptBoard.com, tu t'inscris et ne reçoit que les offres d'emploi qui correspondent à TES besoins.
 
-- 100% of the jobs have the **salary range included**.
-- 100% **anonymity for developers** by default.
-- **CV is not needed**. Completely optional.
-- Earn **$500 if you are hired **through JavaScriptBoard.com!
+- 100% des offres d'emploi publiées **avec salaire**.
+- 100% **anonymat pour les développeurs** par défaut.
+- **CV non nécessaire**. Complètement optionnel.
+- Gagne **500$ si tu es embauché** avec JavaScriptBoard.com!
 
-**Join for free at [JavaScriptBoard.com](https://www.javascriptboard.com/)**
+**Inscris-toi gratuitement sur [JavaScriptBoard.com](https://www.javascriptboard.com/)**
 
 ---
 
