--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/127/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/127/index.mdx
@@ -45,7 +45,7 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Nodejs.dev adopting Next.js?](https://twitter.com/ovflowd/status/1599417661242232832): la doc Node.js pourrait miger de Gatsby vers Next.js
 
 <SubscribeFormEmbed />
 
@@ -55,24 +55,24 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 <div style={{maxWidth: 300}}>
 
-[![JavaScriptBoard.com - Laisse le job te trouver](/emails/issues/127/javascriptboard.jpg)](https://www.javascriptboard.com/)
+[![JavaScriptBoard.com - Laisse le job te trouver](/emails/issues/127/javascriptboard.jpg)](https://cutt.ly/C1VnflC)
 
 </div>
 
-**[JavaScriptBoard.com - Laisse le job te trouver](https://www.javascriptboard.com/)**
+**[JavaScriptBoard.com - Laisse le job te trouver](https://cutt.ly/C1VnflC)**
 
 JavaScriptBoard.com **renverse le système d'embauche** et se concentre sur les développeurs qui recherchent **des relations de travail à long terme**.
 
 Plus besoin de lire les messages des recruteurs sur LinkedIn et les offres d'emploi inintéressantes !
 
-Sur JavaScriptBoard.com, tu t'inscris et ne reçoit que les offres d'emploi qui correspondent à TES besoins.
+Sur JavaScriptBoard.com, tu t'inscris et ne reçois que les offres d'emploi qui correspondent à TES besoins.
 
 - 100% des offres d'emploi publiées **avec salaire**.
 - 100% **anonymat pour les développeurs** par défaut.
 - **CV non nécessaire**. Complètement optionnel.
 - Gagne **500$ si tu es embauché** avec JavaScriptBoard.com!
 
-**Inscris-toi gratuitement sur [JavaScriptBoard.com](https://www.javascriptboard.com/)**
+**Inscris-toi gratuitement sur [JavaScriptBoard.com](https://cutt.ly/C1VnflC)**
 
 ---
 
@@ -108,12 +108,13 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Prerender pages in Chrome for instant page navigations](https://developer.chrome.com/blog/prerender-pages/)
+- [Fast is good, instant is better!](https://calendar.perfplanet.com/2022/fast-is-good-instant-is-better/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/thekitze/status/1599479869540552704
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
