--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/127/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/127/index.mdx
@@ -45,7 +45,60 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 ## ⚛️ React {#react}
 
+https://react.holiday/
+
+[Why you should reconsider prefetching in Remix](https://www.themosaad.com/blog/reconsider-prefetching-in-remix)
+
+[React vs React Native: How Different Are They, Really?](https://echobind.com/post/react-vs-react-native-how-different-are-they)
+
+[Add rolling sessions to Remix](https://sergiodxa.com/articles/add-rolling-sessions-to-remix)
+
+[React.js - The Documentary - Trailer](https://www.youtube.com/watch?v=gmp0istg5xo)
+
+https://twitter.com/sebastienlorber/status/1598622539655233538
+
+[Nextra 2.0](https://nextra.site/)
+
+https://twitter.com/shuding_/status/1598730026685534213
+
+[Different Dimensions of Remix Deploy Targets](https://andre-landgraf.dev/blog/2022-12-03_different-dimensions-of-remix-deploy-targets)
+
+https://twitter.com/AndreLandgraf94/status/1599189563721003009
+
+[Inside React Query](https://tkdodo.eu/blog/inside-react-query)
+
+https://twitter.com/TkDodo/status/1599139218835787777
+
+[component testing in storybook](https://bradfrost.com/blog/link/component-testing-in-storybook/)
+
+https://twitter.com/brad_frost/status/1598706203646865409
+
+[Papanasi 1.0](https://twitter.com/CKGrafico/status/1597585206034169857)
+
+[NextJS, SvelteKit, Remix and the future of Storybook](https://storybook.js.org/blog/framework-api/)
+
+https://twitter.com/storybookjs/status/1598361540595486726
+
+https://twitter.com/storybookjs/status/1598361509066903555
+
+[How we migrated from Redux to TanStack Query and Redux Toolkit](https://tech.storyly.io/how-we-migrated-from-redux-to-tanstack-query-and-redux-toolkit-ac9be2f445be)
+
+[Lessons learned: how I’d rebuild a social web app like Twitter today](https://paularmstrong.dev/blog/2022/11/28/lessons-learned-how-i-would-rebuild-twitter-today/)
+
+- [Remix - Roadmap Planning #1](https://www.youtube.com/watch?v=YSo0vKqAWtk)
+
+- [The Children Prop Pattern in React](https://www.craftvalue.io/blog/react-children-prop-pattern)
+- [React Conditional Rendering With Type Safety and Exhaustive Checking](https://www.lloydatkinson.net/posts/2022/react-conditional-rendering-with-type-safety-and-exhaustive-checking/): une technique React + TypeScript utile à connaitre pour s'assurer de n'oublier aucun cas (en attendant un vrai support du pattern matching).
+- [TanStack Router: Type safe routing and URL state management for your applications](https://www.youtube.com/watch?v=qUZm3gbMOeo): Tanner présente son nouveau routeur 100% typesafe et agnostic. Je fais le [meme constant que lui](https://twitter.com/sebastienlorber/status/1555493419128168449): les APIs existantes (Next.js, React-Router) ne facilitent pas la création d'apps qui utilisent beaucoup les query-strings.
+- [React Streaming In Depth! NextJS! Remix! DIY!](https://www.youtube.com/watch?v=o3JWb04DRIs): video longue qui détaille comment le streaming fonctionne avec React, via les frameworks Next.js et Remix. Propose aussi une implémentation fait maison (pas pour la production).
+- Beta docs updates: [useTransition](https://twitter.com/dan_abramov/status/1598468389340585984) + [Suspense](https://twitter.com/dan_abramov/status/1598412132827435008) + [useDeferredValue](https://twitter.com/dan_abramov/status/1598414645244534784)
+- [HTML + React-Three-Fiber demo](https://twitter.com/0xca0a/status/1599367266448994304)
 - [Nodejs.dev adopting Next.js?](https://twitter.com/ovflowd/status/1599417661242232832): la doc Node.js pourrait miger de Gatsby vers Next.js
+- [React Server Components + MDX](https://twitter.com/sebastienlorber/status/1598615824927002624): l'impact des RSC est potentiellement assez important pour les sites de contenu comme Docusaurus ;)
+- [ChatGPT refactoring php + jquery to Next.js](https://twitter.com/thekitze/status/1598414259137880066): cette nouvelle AI est impressionnante et fait beaucoup parler les devs cette semaine sur Twitter!
+- [Jotai 1.11](https://twitter.com/jotaijs/status/1598366077527810048)
+- [Gatsby 5.2](https://www.gatsbyjs.com/docs/reference/release-notes/v5.2/)
+- [Redwood 3.5](https://github.com/redwoodjs/redwood/releases/tag/v3.5.0)
 
 <SubscribeFormEmbed />
 
@@ -78,7 +131,16 @@ Sur JavaScriptBoard.com, tu t'inscris et ne reçois que les offres d'emploi qui 
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 📊 [State of React Native](https://stateofreactnative.com/): Software Mansion prépare un sondage autour de React-Native et nous invite à contribuer aux questions posées: [2022 Call for Questions](https://github.com/software-mansion/state-of-react-native/discussions/1).
+- 📦 [Tamagui v1 Release Candidate](https://tamagui.dev/blog/version-one-release-candidate): Tamagui est une solution prometteuse basée sur un compiler pour styler ses composants React de manière universelle (mobile et web). Le passage en RC marque la stabilisation des APIs.
+- 📦 [Solito v2](https://solito.dev/v2): une autre solution pour le styling universel. Support de Next.js 13 + composant SolitoImage.
+- 📦 [Reanimated 3.0-rc.8](https://twitter.com/kzzzf/status/1598394289570156544): nouvelle implémentation beaucoup plus performante des Shared Values
+- 📦 [Preact-Native](https://github.com/barelyhuman/preact-native): un dev veut faire fonctionner Preact avec React-Native. Cela semble complexe, et mis en [stand-by](https://reaper.is/writing/20221204-decisions-and-updates-november-2022).
+- 📦 [create-react-native-library 0.27.2](https://twitter.com/satya164/status/1598774126805766144): support RN 0.71, Fabric template...
+- 📦 [React-Native 0.71.0-RC.3](https://twitter.com/Kelset/status/1598018432229777408)
+- 💬 [Expo Router RFC - Shared Routes](https://twitter.com/Baconbrix/status/1598074538298048512)
+- 🐦 [Krzysztof Magiera - "Next version of reanimated will finally have proper stack trace support."](https://twitter.com/kzzzf/status/1598828117509910528)
+- 🎥 [Confetti Animation with React-Native Skia](https://www.youtube.com/watch?v=qOhYFDOEOmo)
 
 ---
 
@@ -98,7 +160,8 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Actualités de la semaine - ESLint / tRPC / State of JS 2022](https://www.youtube.com/watch?v=bt2v_nrK5dM)
+- [TypeScript coté React, safe ou pas safe ?](https://www.youtube.com/watch?v=EtBP-xi-ouA)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -108,13 +171,45 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
+[Updates from the 93rd TC39 meeting](https://dev.to/hemanth/updates-from-the-93rd-tc39-meeting-2n8f)
+
+https://twitter.com/robpalmer2/status/1598960972697600000
+
+https://twitter.com/robpalmer2/status/1597947853598785537
+
+- [Tailwind is a Leaky Abstraction](https://jakelazaroff.com/words/tailwind-is-a-leaky-abstraction/)
+- [What working with Tailwind CSS every day for 2 years looks like](https://www.themosaad.com/blog/two-years-of-tailwind-css)
+- [Container Queries in Firefox 109](https://twitter.com/jensimmons/status/1598798281513000960): maintenant dispo dans tous les navigateurs 🙌
+- [How TypeScript 4.9 `satisfies` Your Prisma Workflows](https://www.prisma.io/blog/satisfies-operator-ur8ys8ccq7zb)
 - [Prerender pages in Chrome for instant page navigations](https://developer.chrome.com/blog/prerender-pages/)
 - [Fast is good, instant is better!](https://calendar.perfplanet.com/2022/fast-is-good-instant-is-better/)
+- [Speeding up the JavaScript ecosystem - one library at a time](https://marvinh.dev/blog/speeding-up-javascript-ecosystem/)
+- [Electron 22.0](https://www.electronjs.org/blog/electron-22-0)
+- [Lightning CSS 1.17](https://github.com/parcel-bundler/lightningcss/releases/tag/v1.17.0)
+- [New to the web platform in November](https://web.dev/web-platform-11-2022/)
+- [Getting the most from GitHub Copilot](https://shift.infinite.red/getting-the-most-from-github-copilot-8f7b32014748)
+- [Top Announcements of AWS re:Invent 2022](https://aws.amazon.com/fr/blogs/aws/top-announcements-of-aws-reinvent-2022/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
+https://twitter.com/dan_abramov/status/1598149838017003520
+
 https://twitter.com/thekitze/status/1599479869540552704
+
+https://twitter.com/thekitze/status/1599022494723100672
+
+https://twitter.com/thekitze/status/1598790472750682112
+
+https://twitter.com/RReverser/status/1599038265180721152
+
+https://twitter.com/mrousavy/status/1598811384443281416
+
+https://twitter.com/thekitze/status/1598666488981979137
+
+https://twitter.com/JakeWharton/status/1598339647515799553
+
+https://twitter.com/jaredpalmer/status/1599765374265749504
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
